[package]
name = "pay_to_excel"
version = "0.1.0"
authors = ["toferc <cgeist7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.16.1"
simple_excel_writer = "0.1.7"
chrono = {version = "0.4.11", features= ["serde"] }
graphql_client = "0.9.0"
serde = "^1.0"
reqwest = "^0.9"
csv = "1.1.3"